--- a/main.ipynb
+++ b/main.ipynb
@@ -1896,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "56a4432e-48df-45ef-9a37-0dc719ac1a74",
    "metadata": {},
    "outputs": [],
@@ -1996,6 +1996,76 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5efa6ca7-9733-42a4-b4a0-edeb9fe70448",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfe86b79-6ed2-4262-85c8-0a6b6a9ec55d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter age:  40\n",
+      "Enter chest pain type (ATA, NAP, ASY, ASYmp):  ATA\n",
+      "Enter resting blood pressure:  160\n",
+      "Enter cholesterol level:  90\n",
+      "Enter resting ECG (Normal, ST-T wave abnormality, Left ventricular hypertrophy):  Normal\n",
+      "Enter maximum heart rate:  179\n",
+      "Enter exercise-induced angina (Y or N):  Y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: b'<html><head><meta charset=utf-8><meta name=viewport content=\"initial-scale=1, minimum-scale=1, width=device-width\"><title>Page load error Google Cloud Console</title><link href=\"//fonts.googleapis.com/css?family=Roboto:400,500\" rel=\"stylesheet\" nonce=\"YbNjTv9vUg6AT_nq913Lnw\"><style nonce=\"YbNjTv9vUg6AT_nq913Lnw\">\\n        * {\\n            margin: 0;\\n            padding: 0;\\n          }\\n          html,\\n          code {\\n            font: 13px roboto, sans-serif;\\n          }\\n          html {\\n            background: #fff;\\n            color: #000;\\n          }\\n          body {\\n            color: #000;\\n            text-align: center;\\n            margin: auto;\\n          }\\n          pre {\\n            font-family: Monaco, \"Liberation Mono\", Courier, monospace;\\n            font-size: 13px;\\n            text-align: left;\\n            white-space: pre-wrap;\\n            padding: 10px;\\n          }\\n          img {\\n            border: 0;\\n            display: inline-block;\\n            height: 248px;\\n            width: 248px;\\n          }\\n          h1 {\\n            font: 20px roboto, sans-serif;\\n            margin-top: 30px;\\n          }\\n          p.error-message {\\n            margin-top: 10px;\\n          }\\n          p.stacktrace {\\n            font-size: 13px;\\n            margin-top: 30px;\\n            text-align: left;\\n            padding: 10px;\\n          }\\n          button {\\n            font: 13px roboto, sans-serif;\\n            text-transform: uppercase;\\n            border: none;\\n            background: #fff;\\n            margin-top: 30px;\\n            color: #3367d6;\\n            cursor: pointer;\\n          }\\n          a {\\n            color: #3367d6;\\n          }\\n        </style></head><body><img alt=\"\" src=\"//ssl.gstatic.com/pantheon/images/genericError.png\" role=\"presentation\"><h1>Unable to load the Google Cloud Console right now</h1><p class=\"error-message\">Sorry about that. Try again in a few minutes. <a href=\"https://status.cloud.google.com\">Check status</a></p><p><button id=\"reload-button\">Try again</button><script nonce=\"OYGh68qilX49Tzo_uQ0gKQ\">function reload() {window.location.reload(true);}var reloadButton = document.getElementById(\"reload-button\"); if (reloadButton.addEventListener) reloadButton.addEventListener(\"click\", reload); else if (reloadButton.attachEvent) reloadButton.attachEvent(\"click\", reload);</script></p></body></html>'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "url = 'https://console.cloud.google.com/vertex-ai/locations/us-central1/endpoints/7567854971098497024?authuser=0&project=comp840-project1&supportedpurview=project'\n",
+    "headers = {'Content-Type': 'application/json'}\n",
+    "\n",
+    "while True:\n",
+    "    age = input('Enter age: ')\n",
+    "    chest_pain_type = input('Enter chest pain type (ATA, NAP, ASY, ASYmp): ')\n",
+    "    resting_bp = input('Enter resting blood pressure: ')\n",
+    "    cholesterol = input('Enter cholesterol level: ')\n",
+    "    resting_ecg = input('Enter resting ECG (Normal, ST-T wave abnormality, Left ventricular hypertrophy): ')\n",
+    "    max_hr = input('Enter maximum heart rate: ')\n",
+    "    exercise_angina = input('Enter exercise-induced angina (Y or N): ')\n",
+    "\n",
+    "    data = {\n",
+    "        \"Age\": age,\n",
+    "        \"ChestPainType\": chest_pain_type,\n",
+    "        \"RestingBP\": resting_bp,\n",
+    "        \"Cholesterol\": cholesterol,\n",
+    "        \"RestingECG\": resting_ecg,\n",
+    "        \"MaxHR\": max_hr,\n",
+    "        \"ExerciseAngina\": exercise_angina\n",
+    "    }\n",
+    "\n",
+    "    response = requests.post(url, headers=headers, data=json.dumps(data))\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        prediction = json.loads(response.content)['Prediction']\n",
+    "        print('Prediction: {}'.format(prediction))\n",
+    "    else:\n",
+    "        print('Error: {}'.format(response.content))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20126e56-a888-4acc-a4d4-13481e253604",
    "metadata": {},
    "outputs": [],
    "source": []
